--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "axios": "^1.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
