--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@auth0/auth0-react": "^1.12.0",
+    "@auth0/auth0-react": "^1.12.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "axios": "^1.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
